alt-k8s/kubernetes/services/base/ingress-edge-server-ngrok.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: edge-ngrok
  annotations:
    certmanager.k8s.io/issuer: "letsencrypt-issuer-staging"
spec:
  tls:
  - hosts:
    - f329d0696d26.ngrok.io 
    secretName: tls-ngrok-letsencrypt-certificate
  rules:
  - host: f329d0696d26.ngrok.io 
    http:
      paths:
      - path: /oauth
        pathType: Exact
        backend:
          service: 
            name: auth-server
            port:
              number: 80
      - path: /product-composite
        pathType: Exact
        backend:
          service:
            name: product-composite
            port: 
              number: 80        
      - path: /actuator/health
        pathType: Exact
        backend:
          service: 
            name: product-composite
            port:
              number: 80
